--- a/CSS/index.css
+++ b/CSS/index.css
@@ -23,10 +23,12 @@
         right: 1.75rem;
         width: 30rem;
         padding: 20px;
+        text-align: justify;
         border-radius: 5px;
         /* z-index: -1; */
         border-left: 1px solid #ffffff;
     }
+
 }
 
 /* text */
@@ -42,6 +44,7 @@
 .whats-new{
     text-align: center;
     margin-top: 5rem;
+    padding: 1rem;
 }
 
 
@@ -92,13 +95,14 @@
             text-align: justify;
         }
     }
+
 }
 
 .cul-main{
-
     margin-bottom: 4rem;
 }
 .img-div{
+    width: 22rem;
     height: 520px;
     position: relative;
     overflow: hidden;
@@ -179,7 +183,7 @@
     padding: 1rem;
     display: flex;
     justify-content: end;
-
+    
     .btn-cstm{
         width: 50px;
         height: 50px;
@@ -210,3 +214,37 @@
     box-shadow: 2px 2px 14px var(--med-bg);
 }
 
+
+@media screen and (max-width:768px) {
+
+    
+    /* video */
+    .text-div{
+        width: 90% !important;
+        height: auto;
+        margin: 4px;
+        position: absolute;
+        left: 3% !important;
+    }
+
+    /* after video */
+    /* carosel */
+
+    .btns{
+        top: 25%;
+    }
+    .overlay{
+        position: relative;
+        width: 100%;
+        height: 18rem;
+        background-color: var(--dark);
+    }
+
+    /* culture */
+    .img-col{
+        width: 100%;
+        margin: 1rem 0;
+        display: flex;
+        justify-content: center;
+    }
+}
