--- a/CSS/districts.css
+++ b/CSS/districts.css
@@ -1,22 +1,26 @@
 
-.col .card a{
+.col{
+    display: flex;
+    justify-content: center;
+}
+.col .card-main{
     position: relative;
-    /* border: 2px solid red; */
     width: 20rem;
-    height: 15rem;
+    height: 15rem ;
     border-radius: 10px;
     box-shadow: 2px 2px 8px var(--med-bg);
     transition: all 0.2s ease-in-out;
     text-decoration: none;
+    margin: 5px;
     
     &:hover {
         transform: scale(1.02);;
         box-shadow: 4px 4px 12px var(--med-bg);
     }
     img{
-        border-radius: 10px;
-        width: 100%;
+        width: 100% ;
         height: 100%;
+        border-radius: 10px;
         object-fit: cover;
     }
     h5{
@@ -28,5 +32,12 @@
         background: var(--med-bg);
         color: var(--card-text);
         text-align: center;
+    }
+}
+@media screen and (min-width: 992px) and (max-width: 1200px){
+
+    .col .card-main{
+        width: 18rem;
+        height: 14rem;
     }
 }
