--- a/CSS/ask.css
+++ b/CSS/ask.css
@@ -30,7 +30,7 @@
 
 
 .add-q .btn-cstm{
-    position: absolute;
+    position: fixed;
     bottom: 7rem;
     right: 3rem;
 
@@ -40,9 +40,11 @@
     background-color: transparent;
     border-radius: 50%;
     border: 1px solid var(--accent-light);
+    box-shadow: 2px 2px 10px var(--med-bg);
     &:hover{
         color: var(--accent-dark);
         border: 1px solid var(--primary-dark);
+        box-shadow: 4px 4px 8px var(--med-bg);
     }
 }
 
