--- a/CSS/faq.css
+++ b/CSS/faq.css
@@ -20,8 +20,8 @@
     position: relative;
 }
 .add-q .btn-cstm{
-    position: absolute;
-    bottom: 10rem;
+    position: fixed;
+    bottom: 4rem;
     right: 3rem;
 
     width: 50px;
@@ -30,8 +30,10 @@
     background-color: transparent;
     border-radius: 50%;
     border: 1px solid var(--accent-light);
+    box-shadow: 2px 2px 10px var(--med-bg);
     &:hover{
         color: var(--accent-dark);
         border: 1px solid var(--primary-dark);
+        box-shadow: 4px 4px 8px var(--med-bg);
     }
 }
