--- a/CSS/update.css
+++ b/CSS/update.css
@@ -33,3 +33,19 @@
 
     }
 }
+
+
+@media screen and (max-width:768px){
+    
+    .update-head{
+        text-align: center;
+    }
+    .form-div{
+        width: 100%;
+        padding: 2rem 1rem;
+    }
+    .footer-other-main{
+        position: absolute;
+        bottom: 0;
+    }
+}
