--- a/CSS/index.css
+++ b/CSS/index.css
@@ -149,6 +149,8 @@
             position: absolute;
             bottom: 1rem;
             padding: 1rem;
+            width: 100%;
+            background-color: var(--med-bg);
         }
     }
 }
